--- a/style.css
+++ b/style.css
@@ -69,18 +69,22 @@ section .smallb {
     flex-wrap: wrap;
     justify-content: center;
     gap: 5px;
-    margin-bottom: 30px;
+    margin-bottom: 110px;
 }
 
 .boxy {
+    height: auto;
+    width: auto;
     border-radius: 2px;
     padding: 15px 10px;
     background-color: aliceblue;
     font-weight: 600;
+    transition: all;
 }
 .boxy:hover{
+    transition-duration: 0.5s;
     color: rgb(255, 103, 103);
-    border-top: 1.5px solid red;
+    border-top: 1px solid rgb(255, 103, 103);
 }
 /* .red{
     color: rgb(255, 103, 103);
